kustomize/app/echo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-server
  name: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: container
        image: node:16-alpine
        args:
          - /app/echo-server.js
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: script
          mountPath: /app/
      volumes:
        - name: script
          configMap:
            name: echo-server-script-js
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-server
  name: echo-server
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: echo-server
