kustomize/app/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public
spec:
  tls:
  - secretName: wildcard-localhost-dlou-es
  rules:
  - host: public.localhost.dlou.es
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: echo-server
            port:
              name: http
